Added text to about format

--- a/aboutStyle.css
+++ b/aboutStyle.css
@@ -32,7 +32,7 @@ body {
   display: block;
   position: relative;
   overflow: hidden;
-  height: 100vh;
+  height: 47.2vh;
 }
 
 .about-background-image {
@@ -59,16 +59,21 @@ body {
   transform: scale(1.1);
 }
 
+.about-subsection {
+  background-color: rgb(235,235,235);
+  height: 125vh;
+}
+
 #about-main-title {
   /* Set white font color, big text size, and semibolded weight  */
   color: white;
   font-size: 11vw; /* 8% of the width of the screen */
   font-weight: 600; /* Semi-bold */
 
-  /* Set position to be in the center and 25% from the top */
+  /* Set position to be in the center and 24% from the top */
   position: absolute;
-  left: 26%;
-  top: 21%;
+  left: 24%;
+  top: 45%;
   transform: translate(-50%, -30%);
 }
 #about-main-subtitle {
@@ -80,6 +85,17 @@ body {
   /* Set position to be in the center and 50% from the top */
   position: absolute;
   left: 50%;
-  top: 19%;
+  top: 42%;
   transform: translate(-50%, -18px);
+}
+#about-paragraph-section {
+  display: grid;
+  grid-template-columns: 0.8fr 1fr;
+  grid-template-rows: auto auto auto;
+  grid-template-areas:
+    "link image";
+  margin-left: 5vw;
+  margin-top:25vw;
+  justify-items: start;
+  z-index: 2;
 }
