--- a/stylesheets/global/globalStyle.css
+++ b/stylesheets/global/globalStyle.css
@@ -17,3 +17,32 @@
   color: black;
   border-bottom: 2px solid rgba(0,0,0,0.40);
 }
+
+.page-title-section {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+
+  position: absolute;
+  width: 100vw;
+  left: 0;
+  top: 25vh;
+}
+
+.page-title-section>.page-main-title {
+  margin: inherit;
+  /* Set white font color, big text size, and semibolded weight  */
+  color: white;
+  font-size: 11vw; /* 8% of the width of the screen */
+  font-weight: 600; /* Semi-bold */
+  margin-left: 5vw;
+
+}
+.page-title-section>.page-main-subtitle {
+  margin: inherit;
+  /* Set white font color, regular sized text, and light font weight */
+  color: white;
+  font-size: 3vw;
+  font-weight: 350;
+  margin-left: 2vw;
+}
