--- a/stylesheets/aboutStyle.css
+++ b/stylesheets/aboutStyle.css
@@ -1,70 +1,4 @@
-html {
-  /* Set global font family */
-  font-family: "Source Sans Pro", sans-serif;
-}
-
-body {
-  /* Get rid of auto browser margin and padding */
-  margin: 0;
-  padding: 0;
-  /* Overflow hidden constrains all elements to be inside of the window */
-  overflow-x: hidden;
-}
-.about-page {
-  display: grid;
-  grid-template-columns: 100vw;
-  grid-auto-rows: auto;
-  grid-auto-flow: row;
-}
-
-.about-page p {
-  font-weight: 300;
-  font-size: calc(12px + 1vw);
-  line-height: 2.5;
-}
-
-.about-page h1 {
-  font-weight: 600;
-  font-size: 5vw;
-  margin-top: 10vh;
-}
-.about-main-container {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  height: 80vh;
-}
-
-.about-background-image {
-  /* Set the background image with a 40% opacity gray overlay */
-  /* Change the gray value and opacity depending on background image and visibilty of text */
-  background-image: linear-gradient(rgba(152,152,152, 0.25), rgba(152,152,152, 0.25)), url("../public/images/team-image.jpg");
-  /* Only 1 copy of the background is used (don't tile) */
-  background-repeat: no-repeat;
-  /* Cover whole entire div */
-  background-size: cover;
-  /* Center the image in the div */
-  background-position: center;
-
-  /* Position the div to fit the whole screen */
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 55vh;
-  width: 100%;
-
-  /* Apply a blur to the image */
-  /* Can change blur amount when working with different images */
-  filter: blur(5px);
-  transform: scale(1.1);
-}
-
-.about-subsection {
-  background-color: rgb(235,235,235);
-  height: 125vh;
-}
-
-#about-paragraph-section {
+#about-team-paragraph-section {
   display: grid;
   grid-template-columns: 0.8fr 1fr;
   grid-template-rows: auto auto auto;
