--- a/stylesheets/global/navbarStyle.css
+++ b/stylesheets/global/navbarStyle.css
@@ -28,6 +28,7 @@
   /* Give all nav elements a margin */
   margin: 5px;
   transition: color 0.5s ease;
+  cursor: pointer;
 }
 
 .navbar-element:hover{
