--- a/stylesheets/about/aboutMembers.css
+++ b/stylesheets/about/aboutMembers.css
@@ -52,11 +52,13 @@ div.member-container>div.member-overlay-view {
   z-index: 2;
   overflow: scroll;
   transition: all 0.5s ease;
+  opacity: 0;
 }
 
 div.member-container:hover>div.member-overlay-view {
   visibility: visible;
   width: 100%;
+  opacity: 1;
 }
 div.member-container:hover>img.member-image {
   filter: blur(5px);
