--- a/stylesheets/about/aboutTheTeamStyle.css
+++ b/stylesheets/about/aboutTheTeamStyle.css
@@ -1,14 +1,16 @@
 #about-team-paragraph-section {
   display: grid;
-  grid-template-columns: 0.8fr 0.8fr;
+  grid-template-columns: auto auto;
   grid-template-rows: auto auto auto;
   grid-template-areas:
-    "link image";
+    "link paragraph"
+    "link image"
+    "link para";
   margin-left: 5vw;
   margin-top:0vw;
   justify-items: start;
   z-index: 2;
-  height: 100vh;
+  height: auto;
   margin-right: 5vw;
 
 }
@@ -16,12 +18,27 @@
   grid-area: link image;
   background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("../../public/images/team-image.jpg");
   background-size: cover;
-  width: 85%;
-  height: 50%;
+  width: 95%;
+  height: 32%;
   justify-self: start;
   margin-right: 5vw;
-  margin-top: 10vw;
+  margin-top: 5vw;
   align-self: start;
 
   box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4), 0 12px 30px 0 rgba(0, 0, 0, 0.4);
+}
+#about-team-paragraph-section>#right-paragraph{
+  grid-area: link para;
+  padding-left: 2.5vw;
+  margin-top: 2.5vw;
+
+
+}
+
+#about-team-paragraph-section>#left-paragraph {
+  margin-top: -57vw;
+  grid-area: link paragraph;
+  text-align: left;
+  padding-right: 2.5vw;
+
 }
