--- a/stylesheets/global/navbarStyle.css
+++ b/stylesheets/global/navbarStyle.css
@@ -26,7 +26,7 @@
   overflow: visible;
   transform: translate(-50%, 0);
   z-index: 10;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(255,255,255,0.2);
   transition: all 0.5s ease;
 }
 
@@ -48,8 +48,13 @@
   position: relative;
 }
 .navbar-element-current {
-  color: rgb(200,200,200);
+  color: #333333;
 }
+
+.navbar-element-current-dark {
+  color: white;
+}
+
 .navbar-element-no-dropdown>a {
   /* Get rid of default underline */
   text-decoration: none;
@@ -103,6 +108,9 @@
 }
 
 .navbar-element>.dropdown-title-current {
+  color: rgb(80,80,80);
+}
+.navbar-element-dark>.dropdown-title-current {
   color: rgb(200,200,200);
 }
 
@@ -125,4 +133,8 @@
 }
 .navbar-dropdown-element-list-item:hover {
   color: rgba(80,80,80, 1.0);
+}
+
+.navbar-dropdown-element-list-item-dark:hover {
+  color: rgba(200,200,200, 1.0);
 }
