--- a/stylesheets/global/navbarStyle.css
+++ b/stylesheets/global/navbarStyle.css
@@ -26,7 +26,7 @@
   overflow: visible;
   transform: translate(-50%, 0);
   z-index: 10;
-  background-color: rgba(255,255,255,0.2);
+  background-color: rgba(200,200,200,0.5);
   transition: all 0.5s ease;
 }
 
@@ -78,25 +78,11 @@
 }
 
 .navbar-element:hover {
-  background-color: rgba(255,255,255,0.6);
-}
-
-.navbar-element:hover>.navbar-dropdown-element-list {
-  display: block;
-  background-color: rgba(255,255,255,0.4);
-  opacity: 1;
-  visibility: visible;
+  background-color: rgba(200,200,200,0.8);
 }
 
 .navbar-element-dark:hover {
-  background-color: rgba(20,20,20,0.8);
-}
-
-.navbar-element-dark:hover>.navbar-dropdown-element-list {
-  display: block;
-  background-color: rgba(20,20,20,0.6);
-  opacity: 1;
-  visibility: visible;
+  background-color: rgba(80,80,80);
 }
 
 .navbar-element>.dropdown-title {
@@ -115,18 +101,35 @@
 }
 
 .navbar-dropdown-element-list {
-  background-color: rgba(0,0,0,0);
-  opacity: 0;
   visibility: hidden;
+  transform: scaleY(0.1) translateY(-100%);
   position: absolute;
   transition: all 0.5s ease;
+  z-index: -1;
 
   list-style-type: none;
   margin-top: 0;
   text-align: center;
   padding-left: inherit;
   width: calc(100%);
+  opacity: 0;
 }
+.navbar-element:hover>.navbar-dropdown-element-list {
+  display: block;
+  background-color: rgba(220,220,220,0.6);
+  transform: scaleY(1) translateY(0);
+  visibility: visible;
+  opacity: 1;
+}
+
+.navbar-element-dark:hover>.navbar-dropdown-element-list {
+  display: block;
+  background-color: rgba(85,85,85);
+  visibility: visible;
+  opacity: 1;
+  transform: scaleY(1) translateY(0);
+}
+
 
 .navbar-dropdown-element-list-item {
   transition: all 0.5s ease;
