--- a/stylesheets/about/aboutTheTeamStyle.css
+++ b/stylesheets/about/aboutTheTeamStyle.css
@@ -1,10 +1,8 @@
 #about-team-paragraph-section {
   display: grid;
   grid-template-columns: auto auto;
-  grid-template-rows: auto auto auto;
   grid-template-areas:
     "link paragraph"
-    "link image"
     "link para";
   margin-left: 5vw;
   margin-top:0vw;
@@ -14,31 +12,31 @@
   margin-right: 5vw;
 
 }
-#about-team-paragraph-section>#first-image {
-  grid-area: link image;
-  background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("../../public/images/team-image.jpg");
-  background-size: cover;
-  width: 95%;
-  height: 32%;
-  justify-self: start;
-  margin-right: 5vw;
-  margin-top: 5vw;
-  align-self: start;
 
-  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4), 0 12px 30px 0 rgba(0, 0, 0, 0.4);
-}
 #about-team-paragraph-section>#right-paragraph{
   grid-area: link para;
-  padding-left: 2.5vw;
+  padding-right: 2.5vw;
   margin-top: 2.5vw;
 
 
 }
 
 #about-team-paragraph-section>#left-paragraph {
-  margin-top: -57vw;
-  grid-area: link paragraph;
-  text-align: left;
-  padding-right: 2.5vw;
+  grid-area: link para;
+  padding-left: 2.5vw;
+  margin-top: 2.5vw;
+  align-self: start;
 
+}
+#about-team-paragraph-section>#first-image {
+  grid-area: link paragraph;
+  background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("../../public/images/team-image.jpg");
+  background-size: cover;
+  width: 43%;
+  height: 60%;
+  margin-right: 5vw;
+  align-self: end;
+  position: absolute;
+  margin-top: 56.5%;
+  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4), 0 12px 30px 0 rgba(0, 0, 0, 0.4);
 }
