--- a/stylesheets/about/aboutTheTeamStyle.css
+++ b/stylesheets/about/aboutTheTeamStyle.css
@@ -1,9 +1,10 @@
 #about-team-paragraph-section {
   display: grid;
   grid-template-columns: auto auto;
+  grid-template-rows: 1 2.5;
   grid-template-areas:
-    "link paragraph"
-    "link para";
+    "paragraph para"
+    "image para";
   margin-left: 5vw;
   margin-top:0vw;
   justify-items: start;
@@ -14,7 +15,7 @@
 }
 
 #about-team-paragraph-section>#right-paragraph{
-  grid-area: link para;
+  grid-area: paragraph;
   padding-right: 2.5vw;
   margin-top: 2.5vw;
 
@@ -22,21 +23,19 @@
 }
 
 #about-team-paragraph-section>#left-paragraph {
-  grid-area: link para;
+  grid-area: para;
   padding-left: 2.5vw;
   margin-top: 2.5vw;
   align-self: start;
 
 }
 #about-team-paragraph-section>#first-image {
-  grid-area: link paragraph;
+  grid-area: image;
   background: linear-gradient(rgba(154,154,154,0.25), rgba(154,154,154,0.25)), url("../../public/images/team-image.jpg");
   background-size: cover;
-  width: 43%;
-  height: 60%;
+  width: 95%;
+  height: 80%;
+  margin-bottom: 34vw;
   margin-right: 5vw;
-  align-self: end;
-  position: absolute;
-  margin-top: 56.5%;
   box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4), 0 12px 30px 0 rgba(0, 0, 0, 0.4);
 }
